[package]
name = "interfere"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
iced = { version = "0.13.1", features = ["advanced", "svg", "tokio"] }
once_cell = "1.21.3"
reqwest = "0.12.24"
rusqlite = { version = "0.37.0", features = ["modern-full", "chrono", "bundled"] }
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "interfere"
path = "main.rs"
