[package]
name = "interfere"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
html5ever = "0.35.0"
iced = { version = "0.13.1", features = ["advanced", "svg", "tokio"] }
infer = "0.19.0"
jsonformat = "2.1.0"
markup5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
mime-sniffer = "0.1.3"
once_cell = "1.21.3"
reqwest = "0.12.24"
rusqlite = { version = "0.37.0", features = ["modern-full", "chrono", "bundled"] }
serde_json = "1.0.145"
tidier = "0.5.3"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"

[[bin]]
name = "interfere"
path = "main.rs"
